@@ -1,3 +1,8 @@
+2002-05-01  Jochen Wiedmann  <joe@ispsoft.de> (0.2016)
+
+	* dbdimp.c: Removed use of mysql_eof. Jay
+	  Lawrence <jay@lawrence.net>
+
 2002-04-30  Jochen Wiedmann  <joe@ispsoft.de> (0.2015)
 
 	* Makefile.PL: Removed dbimon and pmysql from
